--- a/project.ipynb
+++ b/project.ipynb
@@ -886,7 +886,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# сгенерируем еще несколько дополнительных переменных, отражающих доли трат клиентов помесячно от общего кол-ва за полгода\n",
+    "# сгенерируем еще несколько дополнительных переменных, отражающих доли чеков клиентов помесячно от общего кол-ва за полгода\n",
     "df[\"pn1\"] = df[\"n1\"]/df[\"n180\"]\n",
     "df[\"pn2\"] = df[\"n2\"]/df[\"n180\"]\n",
     "df[\"pn3\"] = df[\"n3\"]/df[\"n180\"]\n",
@@ -901,7 +901,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# сгенерируем еще несколько дополнительных переменных, отражающих доли трат клиентов помесячно от общего кол-ва за полгода\n",
+    "# сгенерируем еще несколько дополнительных переменных, отражающих доли покупок в штуках клиентов помесячно от общего кол-ва за полгода\n",
     "df[\"pc1\"] = df[\"c1\"]/df[\"c180\"]\n",
     "df[\"pc2\"] = df[\"c2\"]/df[\"c180\"]\n",
     "df[\"pc3\"] = df[\"c3\"]/df[\"c180\"]\n",
@@ -1125,7 +1125,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# введем показатель, показывающий людей, не откликающихся в принципе на рассылки (эту информацию из переменной rank мы имеем право вытащить)\n",
     "df[\"no_resp\"] = df[\"rank\"].apply(lambda x: 1 if (x == 0 or x == 1 or x == 5) else 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby(\"novice\")[\"m180\"].describe().transpose()"
    ]
   },
   {
@@ -1134,6 +1144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# введем показатель, разграничивающий людей, предпочитающих ходить в \"скидочные\" дни от обычных\n",
     "df[\"sale_lovers\"] = df[\"topDayMonth\"].apply(lambda x: 1 if (x == 15 or 4 < x < 6 or 24 < x < 26) else 0)"
    ]
   },
@@ -1224,6 +1235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# введем бинарный показатель, показывающий, относится ли покупатель к новичкам или нет, выполним его анализ\n",
     "df[\"novice\"] = df[\"exp\"].apply(lambda x: 1 if x < 12 else 0)"
    ]
   },
@@ -1491,6 +1503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# уберем переменные, которые мы не можем использовать при построении модели\n",
     "df2 = df.drop([\"m180\", \"c180\", \"n180\", \"rank\", \"ID\"], axis = 1)"
    ]
   },
